# appify-social-api

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml  social_feed.sql
app/configs/: database.py
app/models/: __init__.py  base.py  comment.py  like.py  post.py  user.py
app/repository/: comment_repo.py  feed_repo.py  user_repo.py
app/routers/: auth_router.py  comments_router.py  deps_router.py  feed_router.py
app/schema/: auth.py  comment.py  post.py
app/security/: jwt.py  password.py
app/services/: auth_service.py  comment_service.py  feed_service.py
app/utils/: response.py
