[tool.poetry]
name = "appify-social-api"
version = "0.1.0"
description = ""
authors = ["raihan <rahi2721@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.139.0"
uvicorn = "^0.51.0"
sqlalchemy = "^2.0.51"
passlib = "^1.7.4"
bcrypt = "^5.0.0"
pyjwt = "^2.13.0"
python-decouple = "^3.8"
email-validator = "^2.3.0"
asyncpg = "^0.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
